wk_taa_taaqa/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>National_Order_SAP_Products__c</fullName>
        <label>National Order SAP Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ARM</fullName>
                </value>
                <value>
                    <fullName>ARM Reseller</fullName>
                </value>
                <value>
                    <fullName>AnswerConnect</fullName>
                </value>
                <value>
                    <fullName>IntelliConnect</fullName>
                </value>
                <value>
                    <fullName>Book-Aspen</fullName>
                </value>
                <value>
                    <fullName>Book-Cash Item</fullName>
                </value>
                <value>
                    <fullName>QP book</fullName>
                </value>
                <value>
                    <fullName>Drop Ship Book</fullName>
                </value>
                <value>
                    <fullName>E-Content</fullName>
                </value>
                <value>
                    <fullName>Learning</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>Specialty Project</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>National_Order_Special_Instructions__c</fullName>
        <label>National Order Special Instructions</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>National_Order_Type__c</fullName>
        <label>National Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Add-On</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>National_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>National Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>National_Payment_Terms__c</fullName>
        <label>National Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IPP</fullName>
                </value>
                <value>
                    <fullName>Net 30</fullName>
                </value>
                <value>
                    <fullName>Flex Pay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>National_Related_Opp_Amount__c</fullName>
        <formula>National_related_New_Sale_Opp__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>National Related Opp Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>National_Submit_to_COP__c</fullName>
        <formula>IF (ISPICKVAL(AMS_Order_Processing_Stage__c, &quot;Approved&quot;), HYPERLINK(&quot;/apex/NationalSubmittoCOP?id=&quot;&amp;Id, IMAGE(&quot;/resource/Button_SubmittoCOP1&quot;, &quot;Submit to COP&quot;),&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>National Submit to COP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>National_Suppress_Order_Acknowledgement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>National Suppress Order Acknowledgement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>National_T_C_Instructions__c</fullName>
        <label>National T&amp;C Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>National_Total_Invoice_Amount__c</fullName>
        <formula>Amount + National_Related_Opp_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>National Total Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>National_True_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>National True Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>National_related_New_Sale_Opp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>National Related New Sale Opp</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (National related New Sale Opp)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Sales_Amount__c</fullName>
        <label>New Sales Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Tax_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if this is a new customer that has not purchased tax before.</inlineHelpText>
        <label>New Tax Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Days_to_Close__c</fullName>
        <formula>IF(IsClosed = TRUE, CloseDate - DateValue(CreatedDate) , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Days to Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Age__c</fullName>
        <formula>IF(
IsClosed = TRUE,
Date_Opportunity_Closed__c - DATEVALUE(CreatedDate),
TODAY()- DATEVALUE(CreatedDate)
)</formula>
        <label>Opportunity Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Closed_Lost__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Opportunity Closed Won</description>
        <label>Opportunity Closed Lost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Closed_Won__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Opportunity Closed Won</description>
        <label>Opportunity Closed Won</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Created_By_DTN__c</fullName>
        <formula>CreatedBy.DTN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Created By DTN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Holdover__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>R&amp;L Only: Check this box on opportunities to indicate that these should remain assigned to you, even though they are no longer in your territory.</inlineHelpText>
        <label>Opportunity Holdover</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Manager__c</fullName>
        <formula>Owner.Manager.FirstName +&quot; &quot;+  Owner.Manager.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_DTN__c</fullName>
        <formula>Owner.DTN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner DTN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_Role__c</fullName>
        <formula>Owner.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner_SAP_DTN__c</fullName>
        <formula>Owner.SAP_DTN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner SAP DTN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Partial_Won__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Opportunity Partial Won</description>
        <label>Opportunity Partial Won</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product_Count__c</fullName>
        <label>Opportunity Product Count</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Opportunity_Pushed__c</fullName>
        <formula>IF( Push_Counter__c &gt;0,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Pushed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oppty_Record_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oppty Record ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Opportunities (Order Case)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Reason__c</fullName>
        <label>Order Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Source_Drill_Down_1__c</fullName>
        <description>Used for Hubspot Intergration</description>
        <label>Original Source Drill-Down 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Source_Drill_Down_2__c</fullName>
        <description>Used for Hubspot Intergration</description>
        <label>Original Source Drill-Down 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Source__c</fullName>
        <description>Used for Hubspot Intergration</description>
        <label>Original Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct Traffic</fullName>
                </value>
                <value>
                    <fullName>Email Marketing</fullName>
                </value>
                <value>
                    <fullName>Offline Sources</fullName>
                </value>
                <value>
                    <fullName>Organic Search</fullName>
                </value>
                <value>
                    <fullName>Other Campaigns</fullName>
                </value>
                <value>
                    <fullName>Paid Search</fullName>
                </value>
                <value>
                    <fullName>Paid Social</fullName>
                </value>
                <value>
                    <fullName>Referrals</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Closed_Reason__c</fullName>
        <label>Other Closed Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Competitor__c</fullName>
        <label>Other Competitor</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Reason__c</fullName>
        <label>Other Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_4_digit_DTN__c</fullName>
        <formula>LEFT(Opportunity_Owner_DTN__c ,4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner 4 digit DTN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Div__c</fullName>
        <formula>left(Owner.DTN__c ,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Div</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Division__c</fullName>
        <formula>TEXT( Owner.Division__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_High_Level_Division__c</fullName>
        <formula>TEXT(Owner.High_Level_Division__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner High Level Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFX_Email_Address__c</fullName>
        <label>PFX Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>POS_Technology__c</fullName>
        <inlineHelpText>Corporate Direct and Indirect Tax teams only</inlineHelpText>
        <label>POS Technology</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Demandware</fullName>
                </value>
                <value>
                    <fullName>Epicor-CRS RetailStore</fullName>
                </value>
                <value>
                    <fullName>Epicor Eagle</fullName>
                </value>
                <value>
                    <fullName>Fujitsu GlobalSTORE</fullName>
                </value>
                <value>
                    <fullName>IBM SurePOS ACE</fullName>
                </value>
                <value>
                    <fullName>Micros-Restaurant</fullName>
                </value>
                <value>
                    <fullName>Micros-Retail</fullName>
                </value>
                <value>
                    <fullName>NCR-ACS</fullName>
                </value>
                <value>
                    <fullName>NCR-AS</fullName>
                </value>
                <value>
                    <fullName>NCR-AS@R</fullName>
                </value>
                <value>
                    <fullName>Netsuite</fullName>
                </value>
                <value>
                    <fullName>NSB Connected Retailer</fullName>
                </value>
                <value>
                    <fullName>Partech</fullName>
                </value>
                <value>
                    <fullName>PCMS BeanStore</fullName>
                </value>
                <value>
                    <fullName>POSI</fullName>
                </value>
                <value>
                    <fullName>Retail Java POS</fullName>
                </value>
                <value>
                    <fullName>Retail Pro</fullName>
                </value>
                <value>
                    <fullName>Retalix StoreLine</fullName>
                </value>
                <value>
                    <fullName>SAP TGM</fullName>
                </value>
                <value>
                    <fullName>Toast POS</fullName>
                </value>
                <value>
                    <fullName>Torex Lucas OSM</fullName>
                </value>
                <value>
                    <fullName>Volante</fullName>
                </value>
                <value>
                    <fullName>Wincor</fullName>
                </value>
                <value>
                    <fullName>Xpient</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Platform_Partner__c</fullName>
        <inlineHelpText>Corporate Direct and Indirect Tax teams only</inlineHelpText>
        <label>Platform Partner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>2600 Hz</fullName>
                </value>
                <value>
                    <fullName>AccountBoss</fullName>
                </value>
                <value>
                    <fullName>AmDocs</fullName>
                </value>
                <value>
                    <fullName>Apttus</fullName>
                </value>
                <value>
                    <fullName>Arterra</fullName>
                </value>
                <value>
                    <fullName>Aurea</fullName>
                </value>
                <value>
                    <fullName>Avaya</fullName>
                </value>
                <value>
                    <fullName>Bandwidth</fullName>
                </value>
                <value>
                    <fullName>BeQuick</fullName>
                </value>
                <value>
                    <fullName>BillStream</fullName>
                </value>
                <value>
                    <fullName>BluIP</fullName>
                </value>
                <value>
                    <fullName>BluLogix</fullName>
                </value>
                <value>
                    <fullName>Broadview/Broadsoft</fullName>
                </value>
                <value>
                    <fullName>CDG</fullName>
                </value>
                <value>
                    <fullName>CDRator</fullName>
                </value>
                <value>
                    <fullName>ChikPea</fullName>
                </value>
                <value>
                    <fullName>Compliance Partners</fullName>
                </value>
                <value>
                    <fullName>Connectwise</fullName>
                </value>
                <value>
                    <fullName>CoreDial</fullName>
                </value>
                <value>
                    <fullName>CSG</fullName>
                </value>
                <value>
                    <fullName>Datex</fullName>
                </value>
                <value>
                    <fullName>DMA</fullName>
                </value>
                <value>
                    <fullName>DTH Software</fullName>
                </value>
                <value>
                    <fullName>EC Infosystems</fullName>
                </value>
                <value>
                    <fullName>Ensim</fullName>
                </value>
                <value>
                    <fullName>HUB</fullName>
                </value>
                <value>
                    <fullName>InContinuum</fullName>
                </value>
                <value>
                    <fullName>Intelebill</fullName>
                </value>
                <value>
                    <fullName>IPiFony</fullName>
                </value>
                <value>
                    <fullName>jBilling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Campaign_Target_Market__c</fullName>
        <formula>TEXT(Campaign.Target_Market__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Campaign Target Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Email__c</fullName>
        <label>Primary Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Phone__c</fullName>
        <label>Primary Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_for_Proposal_Text__c</fullName>
        <formula>CASESAFEID(Primary_Contact_for_Proposal__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact (for Proposal)-Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_for_Proposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact(for Proposal)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corporate Software</fullName>
                </value>
                <value>
                    <fullName>Med/Large Software</fullName>
                </value>
                <value>
                    <fullName>Small Firm Software</fullName>
                </value>
                <value>
                    <fullName>Research &amp; Learning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Sub_Category__c</fullName>
        <label>Product Sub-Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Product_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Tax</fullName>
                </value>
                <value>
                    <fullName>Specialty</fullName>
                </value>
                <value>
                    <fullName>iFirm</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Autoflow</fullName>
                </value>
                <value>
                    <fullName>Refunds Today</fullName>
                </value>
                <value>
                    <fullName>SFS Research &amp; Learning</fullName>
                </value>
                <value>
                    <fullName>Trust</fullName>
                </value>
                <value>
                    <fullName>ARM</fullName>
                </value>
                <value>
                    <fullName>AnswerConnect</fullName>
                </value>
                <value>
                    <fullName>Core Library - Corporate Tax</fullName>
                </value>
                <value>
                    <fullName>Core Library - CPA Professional</fullName>
                </value>
                <value>
                    <fullName>Federal Add On</fullName>
                </value>
                <value>
                    <fullName>State Add On</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Certificate Programs</fullName>
                </value>
                <value>
                    <fullName>Seminars</fullName>
                </value>
                <value>
                    <fullName>Books</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Database/Lookups/RADAR</fullName>
                </value>
                <value>
                    <fullName>POS Portal</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Sales Tax Load Utilities</fullName>
                </value>
                <value>
                    <fullName>Sales Tax Returns</fullName>
                </value>
                <value>
                    <fullName>Sales Tax SaaS Core</fullName>
                </value>
                <value>
                    <fullName>STO</fullName>
                </value>
                <value>
                    <fullName>SureTax - General</fullName>
                </value>
                <value>
                    <fullName>SureTax Professional Services</fullName>
                </value>
                <value>
                    <fullName>SureTax - Telco/Energy</fullName>
                </value>
                <value>
                    <fullName>Tax Interchange for Retail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ATX</fullName>
                </value>
                <value>
                    <fullName>ATX-1040</fullName>
                </value>
                <value>
                    <fullName>ATX-1040SOLO</fullName>
                </value>
                <value>
                    <fullName>ATX-1040TO</fullName>
                </value>
                <value>
                    <fullName>ATX-CCHESSENTIALSPKG</fullName>
                </value>
                <value>
                    <fullName>ATX-MAX</fullName>
                </value>
                <value>
                    <fullName>ATX-MAXBUS</fullName>
                </value>
                <value>
                    <fullName>ATX Prior Years</fullName>
                </value>
                <value>
                    <fullName>ATX-PRSPKG</fullName>
                </value>
                <value>
                    <fullName>ATX-Advantage</fullName>
                </value>
                <value>
                    <fullName>ATX-TTO</fullName>
                </value>
                <value>
                    <fullName>CAS WITH PAYROLL</fullName>
                </value>
                <value>
                    <fullName>CAS</fullName>
                </value>
                <value>
                    <fullName>iFirm Accounting</fullName>
                </value>
                <value>
                    <fullName>iFirm Portal</fullName>
                </value>
                <value>
                    <fullName>iFirm Practice Management</fullName>
                </value>
                <value>
                    <fullName>iFirm Seasonal Tax Office</fullName>
                </value>
                <value>
                    <fullName>iFirm Trial Balance</fullName>
                </value>
                <value>
                    <fullName>Exam Matrix-EA</fullName>
                </value>
                <value>
                    <fullName>FIXED ASSET MANAGER</fullName>
                </value>
                <value>
                    <fullName>LIVE PAYROLL</fullName>
                </value>
                <value>
                    <fullName>PAPERLESSPLUS</fullName>
                </value>
                <value>
                    <fullName>PAPERLESSPLUS PREMIER</fullName>
                </value>
                <value>
                    <fullName>PAYROLL COMPLIANCE</fullName>
                </value>
                <value>
                    <fullName>PortalSafe</fullName>
                </value>
                <value>
                    <fullName>QUICK TAX ESTIMATOR</fullName>
                </value>
                <value>
                    <fullName>RESEARCH</fullName>
                </value>
                <value>
                    <fullName>RETURN RETRIEVAL</fullName>
                </value>
                <value>
                    <fullName>TaxWise</fullName>
                </value>
                <value>
                    <fullName>TRAINING</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prof_SW_Key_Account__c</fullName>
        <formula>IF( 
(ISPICKVAL(Owner.High_Level_Division__c,&quot;Software&quot;)&amp;&amp; RecordType.Name = &quot;New Sales Opportunity&quot;), 
Account.Prof_SW_Key_Account__c,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prof SW Key Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Push_Counter__c</fullName>
        <description>Used for Opportunity Push Counter</description>
        <label>Push Counter</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qualifying_ISR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Qualifying ISR</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>R_L_E_Book_CBR_Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Temporary field to track CBR burndown for R&amp;L e-book initiative --- to be deleted in January 2017</description>
        <label>R&amp;L E-Book CBR Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>R_L_MYA_Mid_Term_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flags renewal opportunities that are part way through an MYA contract</description>
        <label>R&amp;L MYA Mid-Term Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>R_L_MYA_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flags renewal opportunities that are coming off of existing MYA contracts.</description>
        <label>R&amp;L MYA Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>R_L_Renewal_Master_Contract_End_Date__c</fullName>
        <label>R&amp;L Renewal Master Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>R_L_Renewal_Master_Contract_Start_Date__c</fullName>
        <label>R&amp;L Renewal Master Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>R_L_renewal_Master_Contract_Number__c</fullName>
        <label>R&amp;L renewal Master Contract Number</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Details_Other_Reason__c</fullName>
        <inlineHelpText>Required when deal is Closed Lost and Closed Reason = Other. Can also be used to track additional details of why the deal was lost.</inlineHelpText>
        <label>Reason Details/Other Reason</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordType_Name_For_Snapshot__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordType Name For Snapshot</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referral Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Reference_Contact__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Referral Account)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renew_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to change &quot;Stage&quot; of Opportunity to &quot;Renewal Pending&quot;.</description>
        <label>Renew Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renew_Sales_Amount__c</fullName>
        <label>Renew Sales Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewal_Amount__c</fullName>
        <formula>CASE(StageName, &quot;Time to Renew&quot;, Target_Renewal_Amount__c, &quot;Renewal Lost&quot;, Target_Renewal_Amount__c, Amount_Won__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewal_Annual_Start_Date__c</fullName>
        <label>Renewal Annual Start Date</label>
        <type>Date</type>
    </fields>
</CustomObject>